<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dave McVicar\'s Midterm</string>
    <string name="display_label">Summary</string>
    <string name="action_settings">Settings</string>
    <string name="text1">Name:</string>
    <string name="text2">eID:</string>
    <string name="text3">Major:</string>
    <string name="text4">Graduation Year:</string>
    <string name="text5">Gender:</string>
    <string name="text6">Phone:</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>
