<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    style="@style/AppTheme">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linear_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text2"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/edit2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text3"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text4"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/edit4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text5"/>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/gender_buttons">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/male_button"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female_button"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text6"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/edit6"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="onSubmit" />

    </LinearLayout>
</ScrollView>